# realtypecoach

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  INSTALL_DEPENDENCIES.md  PLAN.md  README.md  dev.sh  discover_registry.py  enable_accessibility.sh  install.sh  justfile  kill.sh  main.py  pyproject.toml  test-all  test_atspi.py  test_atspi_final.py  test_atspi_fixed.py  test_atspi_working.py  test_evdev.py  test_integration.py  test_wordfreq.py  uninstall.sh
.claude/agents/: db-checker.md  git-commit.md  log-analyzer.md  run-monitor.md  test-runner.md
.claude/skills/: check-ignored.md
.githooks/: post-commit  pre-commit
core/: VERSION  __init__.py  add_names.py  analyzer.py  burst_config.py  burst_detector.py  common_names.py  data_encryption.py  database_adapter.py  dictionary.py  dictionary_config.py  evdev_handler.py  event_handler.py  frequency_utils.py  hash_manager.py  migration_runner.py  models.py  names.txt  notification_handler.py  ollama_client.py  outlier_detection.py  postgres_adapter.py  postgres_migration_runner.py  smoothing.py  sqlite_adapter.py  sqlite_migration_runner.py  storage.py  sync_handler.py  sync_manager.py  user_manager.py  validation.py  version.py  word_detector.py  wpm_calculator.py
data/: .gitkeep
docs/: README.md  cpu-usage-investigation.md  distribution.md  ruff_fixes.md
docs/concepts/: burst-detection.md  data-storage.md  key-speed-metrics.md  privacy-protection.md  wpm-calculation.md
docs/dead-ends/: atspi-keyboard-capture.md
docs/issues/: device-disconnection-busy-loop-fix.md
docs/issues/monkeytype/: INSTRUCTIONS.md  MONKEYTYPE_INTEGRATION_README.md  README.md  auto_inject.html  bookmarklet.html  firefox_inject.py  firefox_inject_all.py  firefox_practice_with_injection.py  inject_monkeytype.go  monkeytype_auto.py  monkeytype_autoinject.user.js  monkeytype_autoinject_v2.user.js  monkeytype_console.py  monkeytype_custom_text.user.js  monkeytype_inject.html  monkeytype_inject.py  monkeytype_inject_v2.html  monkeytype_injector.py  monkeytype_server.py  monkeytype_set_text.js  open_monkeytype_with_text.py  (+3 more)
docs/references/: AT_SPI_ISSUES.md  KDE_WAYLAND_CONFIG.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_sync_log.py  003_add_deleted_bursts.py
scripts/: burst_outliers.py  calibrate_length_penalty.py  cleanup_digraphs.py  compare_stats.py  correct_stats.py  db_query.py  detailed_security_report.py  firefox_inject.py  firefox_inject_all.py  fix_date_formats.py  fix_date_formats_mock.py  fix_date_formats_simple.py  fix_stats.py  get_typed_text.py  ktouch_custom_lesson.py  local_stats.py  migrate_local_to_remote.py  migrate_to_postgres.sql  monkeytype_auto_inject.html  monkeytype_console.py  monkeytype_injector.user.js  monkeytype_practice.py  ollama_test.py  practice.py  remote_stats.py  retrieve_ignored_words.py  seed_database.py  setup_postgres_vps.sh  start_ollama.sh  sync.py  test_date_standardization.py  test_server_security.py  typing_practice.html  typing_practice.html.bak  vivaldi_inject.py  vivaldi_launch.py  wordfreq_integration.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_burst_detector.py  test_common_names_migration.py  test_common_words_german.py  test_config.py  test_crypto.py  test_dict_detector.py  test_evdev_handler.py  test_keyboard_detector.py  test_keycodes.py  test_llm_prompts.py  test_notification_handler.py  test_ollama_client.py  test_outlier_detection.py  test_smoothing.py  test_storage.py  test_tray_icon.py  test_word_detection.py  test_word_detector.py  test_word_statistics.py  test_wpm_calculator.py  test_wpm_graph.py
ui/: about_dialog.py  burst_histogram.py  settings_dialog.py  stats_panel.py  sync_log_window.py  tray_icon.py  typing_time_graph.py  wpm_graph.py
utils/: __init__.py  clipboard.py  config.py  crypto.py  dict_detector.py  hostname.py  icon_generator.py  keyboard_detector.py  keycodes.py  monkeytype_url.py
