[project]
name = "realtypecoach"
version = "1.0.0"
description = "KDE Wayland typing analysis application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "PySide6",
    "pandas",
    "pyqtgraph",
    "evdev",
    "sqlcipher3-binary",
    "keyring",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "ui*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
